Changes to avoid missing minted.glo complaint at end of make minted.pdf

--- a/source/Makefile
+++ b/source/Makefile
@@ -18,7 +18,7 @@ all: minted doc
 minted.sty: minted.ins minted.dtx
 	tex minted.ins
 
-minted.pdf: minted.sty minted.gls minted.dtx
+minted.pdf: minted.sty minted.dtx
 	$(LATEXMK) $(TEXFLAGS) minted.dtx
 
 minted.gls: minted.glo
